[QuestionItem] Fixed background color when dragging on mobile

--- a/src/pages/FormEdit/QuestionItem/QuestionItem.module.scss
+++ b/src/pages/FormEdit/QuestionItem/QuestionItem.module.scss
@@ -5,6 +5,7 @@
   margin-bottom: 12px;
   position: relative;
   transition: background-color 0.3s;
+  background-color: var(--white);
 
   &:hover:not(.active, .error) {
     border: 1px solid var(--gray-3);
